# cubical-experiments

./: .envrc  .gitignore  DeMorKan.agda  MaybeInjective.agda  NatChurchMonoid.agda  Shapes.agda  Torus.agda  _typos.toml  agda-experiments.agda-lib  cabal.project  cubical-experiments.agda-lib  diagram.tex  flake.nix  index.html  main.js  module.html  style.css
.github/workflows/: check-links.yml  web.yaml
shake/: LICENSE.agda  Main.hs  cubical-experiments-shake.cabal
shake/HTML/: Backend.hs  Base.hs
src/: AdjunctionCommaIso.agda  Applicative.agda  CoherentlyConstant.agda  DeMorKan.agda  Erasure.agda  FirstGroupCohomology.agda  Hats.agda  MonoidalFibres.agda  NaiveFunext.agda  NatChurchMonoid.agda  ObjectClassifier.agda  PointwiseMonoidal.agda  Shapes.agda  TangentBundles.agda  Torus.agda  Untruncate.agda  src.agda-lib
src-1lab/: AdjunctionCommaIso.agda  Applicative.agda  CoherentlyConstant.agda  EasyParametricity.lagda.md  ErasureOpen.lagda.md  FirstGroupCohomology.agda  Goat.agda  Hats.agda  Lawvere.agda  Madeleine.agda  MonoidalFibres.agda  Mystery.agda  Möbius.agda  ObjectClassifier.agda  ObjectClassifier.lagda.md  ObjectClassifiers.lagda.md  PointwiseMonoidal.agda  PostcomposeNotFull.agda  PresheafExponential.agda  Probability.agda  Skeletons.agda  SplitMonoSet.agda  SyntheticCategoricalDuality.agda  SyntheticCategoricalDuality.lagda.md  TangentBundles.agda  TangentBundles.lagda.md  TangentBundlesOfSpheres.lagda.md  Untruncate.agda  YonedaColimit.agda  src-1lab.agda-lib
